# WEB_HW8

./: connection_code.py  data_upload.py  pyproject.toml  search_script.py  test.py
1st_part/: connection_code.py  search_script.py
2nd_part/: consumer.py  producer.py
